--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -147,8 +147,8 @@ BEGIN
     BEGIN
         MENUITEM "Show RAM start...",           ID_RAMSTART
         MENUITEM "Start &Trace Logger...",      ID_TRACELOG
+        MENUITEM "CoreDbg...",                  ID_COREDBG
         MENUITEM "Save Config",                 ID_FORCESAVE
-        MENUITEM "Game Debugger...",            ID_GAMEDEBUGGER
     END
     POPUP "Help"
     BEGIN
@@ -513,7 +513,7 @@ BEGIN
     CONTROL         "",IDC_ERROR_PICTUREBOX,"Static",SS_OWNERDRAW,6,6,42,36
 END
 
-IDD_GAMEDEBUGGERDIALOG DIALOGEX 0, 0, 311, 98
+IDD_COREDBG DIALOGEX 0, 0, 311, 98
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_CAPTION | WS_SYSMENU
 CAPTION "N64 Debugger"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
@@ -525,7 +525,7 @@ BEGIN
     EDITTEXT        IDC_DEBUGGER_PRECOMPADDR,198,6,97,18,ES_AUTOHSCROLL | ES_READONLY
     EDITTEXT        IDC_DEBUGGER_PRECOMPOP,198,30,96,18,ES_AUTOHSCROLL | ES_READONLY
     CONTROL         "RSP",IDC_DEBUGGER_RSP_TOGGLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,42,54,8
-    CONTROL         "Cartridge Tilt",IDC_DEBUGGER_DMA_R_TOGGLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,30,72,9
+    CONTROL         "Cartridge Tilt",IDC_COREDBG_CART_TILT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,30,72,9
     CTEXT           "Disassembled",IDC_STATIC,126,54,66,18,SS_CENTERIMAGE
     EDITTEXT        IDC_DEBUGGER_DISASSEMBLED,198,54,96,18,ES_AUTOHSCROLL | ES_READONLY
     CONTROL         "Regular interval updates",IDC_DEBUGGER_ALWAYS_UPDATE,
@@ -642,7 +642,7 @@ BEGIN
     BEGIN
     END
 
-    IDD_GAMEDEBUGGERDIALOG, DIALOG
+    IDD_COREDBG, DIALOG
     BEGIN
         LEFTMARGIN, 4
         RIGHTMARGIN, 307
@@ -683,7 +683,7 @@ BEGIN
     0
 END
 
-IDD_GAMEDEBUGGERDIALOG AFX_DIALOG_LAYOUT
+IDD_COREDBG AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
