Perform all FPS and VI/s computation on UI thread
Core only records timestamps and doesn't do any computation, so it's freed up to keep emulating while UI thread concurrently computes the statusbar values.

This commit also removes old timer code, forcing the new timer system. While performance has generally improved due to the overhead reduction, there are still some issues with it: the sleep timing is inaccurate (causing it to run at lower FPS than expected in normal mode) and

--- a/winproject/mupen64/mupen64.vcxproj
+++ b/winproject/mupen64/mupen64.vcxproj
@@ -137,6 +137,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\main\helpers\collection_helpers.h" />
     <ClInclude Include="..\..\main\lib\ini.h" />
     <ClInclude Include="..\..\main\lib\argh.h" />
     <ClInclude Include="..\..\lua\Recent.h" />
