Lua: Move callbacks into separate file
This is a step towards decoupling core from windows

--- a/winproject/mupen64/mupen64.vcxproj
+++ b/winproject/mupen64/mupen64.vcxproj
@@ -137,6 +137,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\lua\LuaCallbacks.h" />
     <ClInclude Include="..\..\lua\modules\avi.h"/>
     <ClInclude Include="..\..\lua\modules\d2d.h"/>
     <ClInclude Include="..\..\lua\modules\emu.h"/>
@@ -204,6 +205,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\lua\modules\input.h"/>
+    <ClCompile Include="..\..\lua\LuaCallbacks.cpp" />
     <ClCompile Include="..\..\lua\Recent.cpp" />
     <ClCompile Include="..\..\main\adler32.c">
       <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
