CoreDbg: Remove always update checkbox, change title to CoreDbg

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -514,14 +514,13 @@ END
 
 IDD_COREDBG DIALOGEX 0, 0, 213, 252
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_CAPTION | WS_SYSMENU
-CAPTION "N64 Debugger"
+CAPTION "CoreDbg"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     PUSHBUTTON      "Pause",IDC_COREDBG_TOGGLEPAUSE,6,6,48,18
     PUSHBUTTON      "Advance",IDC_COREDBG_STEP,54,6,36,18
     CONTROL         "RSP",IDC_COREDBG_RSP_TOGGLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,54,54,8
     CONTROL         "Cartridge Tilt",IDC_COREDBG_CART_TILT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,42,72,8
-    CONTROL         "Always update",IDC_COREDBG_ALWAYS_UPDATE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,30,96,8
     LISTBOX         IDC_COREDBG_LIST,0,72,210,180,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
 END
 
